--- a/index.html
+++ b/index.html
@@ -11,84 +11,84 @@
     <h1>Click the picture to see the lightGallery effect</h1>
     <div class="container" id="lightgallery">
       <a href="./img/1.jpg">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/1.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/1.jpg" />
       </a>
       <a href="./img/2.jpg" class="vertical">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/2.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/2.jpg" />
       </a>
       <a href="./img/3.jpg" class="horizontal">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/3.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/3.jpg" />
       </a>
       <a href="./img/4.jpg">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/4.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/4.jpg" />
       </a>
 
       <a href="./img/5.jpg" class="horizontal">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/5.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/5.jpg" />
       </a>
 
       <!-- <a href="./img/b6.jpg" class="big">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/n4.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/n4.jpg" />
       </a> -->
       <!-- <a href="./img/b2.jpg">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/n4.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/n4.jpg" />
       </a> -->
 
       <a href="./img/6.jpg" class="vertical">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/6.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/6.jpg" />
       </a>
 
       <a href="./img/7.jpg">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/7.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/7.jpg" />
       </a>
 
       <!-- <a href="./img/w2.jpeg" class="horizontal">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/n5.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/n5.jpg" />
       </a> -->
 
       <a href="./img/8.jpg">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/8.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/8.jpg" />
       </a>
 
       <a href="./img/9.jpg" class="big">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/9.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/9.jpg" />
       </a>
 
       <a href="./img/10.jpg">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/10.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/10.jpg" />
       </a>
 
       <a href="./img/11.jpg" class="horizontal">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/11.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/11.jpg" />
       </a>
 
       <a href="./img/12.jpg">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/12.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/12.jpg" />
       </a>
 
       <a href="./img/13.jpg" class="big">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/13.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/13.jpg" />
       </a>
 
       <a href="./img/14.jpg">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/14.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/14.jpg" />
       </a>
 
       <a href="./img/15.jpg" class="vertical">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/15.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/15.jpg" />
       </a>
       <a href="./img/16.jpg" class="big">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/16.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/16.jpg" />
       </a>
       <a href="./img/17.jpg" class="vertical">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/17.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/17.jpg" />
       </a>
       <a href="./img/18.jpg" data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
         
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/18.jpg" />
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/18.jpg" />
       </a>
-      <a href="./img/19.jpg">
-        <img loading="lazy" alt= "imagen de la galeria" src="./img/19.jpg" />
+      <a href="./img/19.jpg" data-sub-html="<h4>Fading Light</h4><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
+        <img loading="lazy" alt= "imagen de la galeria" src="./img/mini/19.jpg" />
       </a>
 
       
