--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
     <script src="./js/lightgallery.js"></script>
     <script>
       var imagPop = document.getElementById("lightgallery");
-      lightGallery(imagPop,{cssEasing: 'cubic-bezier(0.680, -0.550, 0.265, 1.550)',speed: 1000});
+      lightGallery(imagPop);
+      // ,{cssEasing: 'cubic-bezier(0.680, -0.550, 0.265, 1.550)',speed: 1000}
 
     </script>
 
